--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
   "license": "ISC",
   "dependencies": {
     "fs": "0.0.1-security",
-    "http": "0.0.1-security"
+    "handlebars": "^4.7.7",
+    "hapi": "^18.1.0",
+    "http": "0.0.1-security",
+    "inert": "^5.1.3",
+    "vision": "^5.4.4"
   }
 }
